#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([jsonlint], [0.241])
AM_INIT_AUTOMAKE([-Wall])

AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AM_PROG_CC_C_O
AC_PROG_YACC
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([string.h libgen.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
